Proyecto local listo para reemplazar remoto, versión ejecutando sin problemas al 03-09-2025 18:40